# path-finder-neural-networks

./: .clang-format  .cs_config.json  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cbuild.sh
src/: camhandler.h  cammanager.cpp  cammanager.h  cs_brainbase.h  cs_chromo.h  cs_image.h  cs_m1_brain.cpp  cs_m1_brain.h  cs_m1_train.h  cs_m1_types.h  cs_m2_brain.cpp  cs_m2_brain.h  cs_m2_train.h  cs_math.h  cs_modelfactory.cpp  cs_modelfactory.h  cs_player.h  cs_rbody.h  cs_scenario.cpp  cs_scenario.h  cs_scenarioterrsetup.cpp  cs_scenarioterrsetup.h  cs_scenariotrain.cpp  cs_scenariotrain.h  cs_serialize.h  cs_serialize_fwd.h  cs_sim.cpp  cs_sim.h  cs_terrain.cpp  cs_terrain.h  cs_trainbase.h  cs_trainer.h  cs_types.h  cs_unit.cpp  cs_unit.h  cs_utils.h  gl_app.cpp  gl_app.h  gl_window.cpp  gl_window.h  (+9 more)
